--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,5 +91,9 @@ dependencies {
     implementation("androidx.compose.material3:material3:1.0.0-beta03")
     implementation("androidx.compose.material3:material3-window-size-class:1.0.0-beta03")
 
+    // Preferences Datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+
 
 }
