--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DaggerHiltTest"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="{$MAPS_API_KEY}" />
         <activity
             android:name=".activities.LocationSplashActivity"
             android:exported="true"
