--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,17 +100,18 @@ dependencies {
     implementation "com.patrykandpatryk.vico:compose-m3:1.4.3"
 
     // Material 3
-    implementation("androidx.compose.material3:material3:1.1.0-alpha01")
-    implementation("androidx.compose.material3:material3-window-size-class:1.1.0-alpha01")
+    implementation("androidx.compose.material3:material3:1.1.0-alpha03")
+    implementation("androidx.compose.material3:material3-window-size-class:1.1.0-alpha03")
 
     // Preferences Datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     // Google gms service for location access
-    implementation 'com.google.android.gms:play-services-location:21.0.0'
+        implementation 'com.github.BirjuVachhani:locus-android:3.0.1'
+        implementation 'com.google.android.gms:play-services-location:20.0.0'
 
     // Places api
-    implementation 'com.google.android.libraries.places:places:2.6.0'
+    implementation 'com.google.android.libraries.places:places:3.0.0'
 
     // Custom simple toast
     implementation 'com.shamanland:xdroid-toaster:0.0.10'
