--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+MAPS_API_KEY = "AIzaSyCcMTFsvjmOPbHrpeZmCC0LCFJ_3e2jEgs"
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
