--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.daggerhilttest"
-        minSdk 21
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -70,6 +70,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'co.yml:ycharts:1.0.0'
 //    implementation 'com.google.android.material:material:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -119,12 +120,6 @@ dependencies {
     implementation 'com.shamanland:xdroid-toaster:0.0.10'
 
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-
-
-
-
-
-
 
 
 }
