--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.1")
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
@@ -80,7 +81,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     implementation "androidx.compose.material:material-icons-extended:1.4.3"
-
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.google.code.gson:gson:2.9.0")
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
@@ -126,6 +126,7 @@ dependencies {
     implementation 'com.shamanland:xdroid-toaster:0.0.10'
 
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation "androidx.compose.runtime:runtime-tracing:1.0.0-alpha03"
 
 
 }
