add permission dispatcher dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,5 +128,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     implementation "androidx.compose.runtime:runtime-tracing:1.0.0-beta01"
 
+    implementation "com.github.permissions-dispatcher:permissionsdispatcher:4.9.2"
+    kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.2"
 
 }
