--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
         android.buildFeatures.buildConfig true
     }
     composeOptions {
@@ -125,4 +126,9 @@ dependencies {
 
     // work manager
     implementation("androidx.work:work-runtime-ktx:2.9.0")
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3'
+
+    implementation 'androidx.hilt:hilt-work:1.2.0'
+
 }
